fix z-index

--- a/app/assets/stylesheets/workplace/styles.css.sass
+++ b/app/assets/stylesheets/workplace/styles.css.sass
@@ -654,7 +654,6 @@ div.status
 
 .week_timetable, .timetable_statistics
   position: relative
-  z-index: 3
 
   .sticky_header
     position: absolute
